Changed to bootstrap

--- a/textalyzer/templates/about.html
+++ b/textalyzer/templates/about.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %} {% block nav_about %}active{% endblock %} {% block content %}
-<h1>About</h1>
-<p>
-    blabla
-</p>
+<div class="row">
+    <div class="col px-3 py-3">
+        <h1 class="display-4">About</h1>
+        <p class="lead">Blabla</p>
+    </div>
+</div>
 {% endblock %}
