--- a/textalyzer/static/style.css
+++ b/textalyzer/static/style.css
@@ -1,29 +1,5 @@
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    border: 1px solid #e7e7e7;
-    background-color: #f3f3f3;
-}
-
-nav li {
-    float: left;
-}
-
-nav li a {
-    display: block;
-    color: #666;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-nav li a:hover:not(.active) {
-    background-color: #ddd;
-}
-
-nav li a.active {
-    color: white;
-    background-color: #4CAF50;
-}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
