--- a/textalyzer/templates/layout.html
+++ b/textalyzer/templates/layout.html
@@ -1,27 +1,59 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
     {% block head %}
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+    <!-- Others -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Textalyzer</title>
     {% endblock %}
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="/" class="{% block nav_home %}{% endblock %}">Home</a></li>
-            <li><a href="/summarizer" class="{% block nav_summ %}{% endblock %}">Summarizer</a></li>
-            <li style="float:right"><a href="/about" class="{% block nav_about %}{% endblock %}">About</a></li>
-        </ul>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/"><i class="bi bi-book"></i> Textalyzer</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a href="/" class="nav-link {% block nav_home %}{% endblock %}">Home</a></li>
+                    <li class="nav-item"><a href="/summarizer"
+                            class="nav-link {% block nav_summ %}{% endblock %}">Summarizer</a></li>
+                    <li class="nav-item"><a href="/about" class="nav-link {% block nav_about %}{% endblock %}">About</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    <main>
+
+    <!-- Main content-->
+    <main role="main" class="container">
         {% block content %} {% endblock %}
     </main>
-    <footer>
-        {% block footer %} &copy; Copyright 2021 by Ruben Peters. {% endblock %}
+
+    <!-- Footer -->
+    <footer class="footer text-center bg-light">
+        <div class="container">
+            {% block footer %} &copy; Copyright 2021 by Ruben Peters. {% endblock %}
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
