First tool: text summarization

--- a/textalyzer/templates/about.html
+++ b/textalyzer/templates/about.html
@@ -2,7 +2,14 @@
 <div class="row">
     <div class="col px-3 py-3">
         <h1 class="display-4">About</h1>
-        <p class="lead">Blabla</p>
+        <p class="lead">This website is a hobby project, where I tried to make it easy for everyone to try it advanced textual analyses.</p>
+
+        <p>This website will contain more textual analysis tools in the future. These are based on the <a href="https://spacy.io/">spaCy</a> Python package.</p>
+
+        <p>This website is developed using the <a href="https://flask.palletsprojects.com/">Flask</a> Python package and the
+            <a href="https://getbootstrap.com">Bootstrap</a> CSS template.</p>
+
+        <p>Read more about this project on the <a href="https://github.com/rubenpeters91/textalyzer">GitHub</a> page.</p>
     </div>
 </div>
 {% endblock %}
