--- a/textalyzer/templates/home.html
+++ b/textalyzer/templates/home.html
@@ -12,7 +12,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Text summarizer</h5>
-                <p class="card-text">Generate a summary of a text using a language-agnostic algorithm</p>
+                <p class="card-text">Generate a summary of a text</p>
                 <a href="/summarizer" class="btn btn-primary">Try it out!</a>
             </div>
         </div>
@@ -20,9 +20,9 @@
     <div class="col-sm-4">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Other tools</h5>
+                <p class="card-text">Other tools are coming soon</p>
+                <a href="#" class="btn btn-primary">TBA</a>
             </div>
         </div>
     </div>
