Added icon and set the output field to read-only

--- a/textalyzer/templates/summarizer.html
+++ b/textalyzer/templates/summarizer.html
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group col">
                 <label for="summarizedtext">Result</label>
-                <textarea class="form-control" id="summarizedtext" rows="20"
+                <textarea class="form-control-plaintext" id="summarizedtext" rows="20"
                     name="summarizedtext"></textarea>
             </div>
         </div>
