--- a/textalyzer/templates/layout.html
+++ b/textalyzer/templates/layout.html
@@ -14,6 +14,7 @@
 
     <!-- Others -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>Textalyzer</title>
     {% endblock %}
 </head>
