--- a/textalyzer/templates/summarizer.html
+++ b/textalyzer/templates/summarizer.html
@@ -19,7 +19,7 @@
             <div class="form-group col">
                 <label for="originaltext">Text to be summarized</label>
                 <textarea class="form-control" id="originaltext" rows="20"
-                    name="originaltext"></textarea>
+                    name="originaltext" placeholder="Copy or type your text here..."></textarea>
             </div>
             <div class="form-group col">
                 <label for="summarizedtext">Result</label>
@@ -27,11 +27,15 @@
                     name="summarizedtext"></textarea>
             </div>
         </div>
-        <div class="row">
-            <div class="form-group col">
-                <label for="percslider">Required length of result (in %)</label>
-                <input type="range" min="0" max="100" value="30" class="slider" id="percslider" ,
-                    name="percslider">
+        <div class="row mt-2">
+            <div class="col">
+                <div class="form-group row">
+                    <label for="sentlength" class="col-sm-8 col-form-label">Required length of result</label>
+                    <div class="col-sm-4">
+                        <input class="form-control" type="number" min="0" value="5" name="sentlength">
+                    </div>
+                </div>
+                
             </div>
             <div class="col">
                 <button type="submit" class="btn btn-primary">Summarize</button>
