simplify Javascript function

--- a/textalyzer/templates/summarizer.html
+++ b/textalyzer/templates/summarizer.html
@@ -38,7 +38,7 @@
             </div>
             <div class="col">
                 <div class="row">
-                    <button type="submit" class="btn btn-primary col-sm-4">Summarize</button>
+                    <button type="button" class="btn btn-primary col-sm-4" onclick="make_summary()">Summarize</button>
                     <label class="col-sm-4 col-form-label" for="inputlength">Sentences in input:</label>
                     <div class="col-sm-4">
                         <input class="form-control-plaintext" type="text" value="" name="inputlength" id="inputlength">
