--- a/textalyzer/templates/summarizer.html
+++ b/textalyzer/templates/summarizer.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block head %}
-<script src="{{ url_for('static', filename='summarise.js') }}"></script>
+<script src="{{ url_for('static', filename='js/summarise.js') }}"></script>
 {{ super() }}
 {% endblock%}
 {% block nav_summ %}active{% endblock %}
