Fix templates and add docs

--- a/textalyzer/templates/summarizer.html
+++ b/textalyzer/templates/summarizer.html
@@ -1,69 +1,6 @@
-{% extends "layout.html" %}
+{% extends "texttools.html" %}
 {% block head %}
 <script src="{{ url_for('static', filename='js/summarise.js') }}"></script>
 {{ super() }}
 {% endblock%}
 {% block nav_summ %}active{% endblock %}
-{% block content %}
-<div class="row">
-    <div class="col px-3 py-3">
-        <h1 class="display-4">Text Summarizer</h1>
-        <p class="lead">Please fill in your text on the left and press the summarize button. You summarized text will
-            appear on the right</p>
-    </div>
-</div>
-
-<div>
-    <form name="summaryform">
-        <div class="row">
-            <div class="form-group col">
-                <label for="originaltext">Text to be summarized</label>
-                <textarea class="form-control" id="originaltext" rows="20" name="originaltext"
-                    placeholder="Copy or type your text here..."></textarea>
-            </div>
-            <div class="form-group col">
-                <label for="summarizedtext">Result</label>
-                <textarea class="form-control-plaintext" id="summarizedtext" rows="20" name="summarizedtext"></textarea>
-            </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col">
-                <div class="form-group row">
-                    <label for="setlanguage" class="col-sm-8 col-form-label">Language:</label>
-                    <div class="col-sm-4">
-                        <select class="form-select" name="setlanguage">
-                            <option value="en" selected>English</option>
-                            <option value="nl">Dutch</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group row mt-2">
-                    <label for="sentlength" class="col-sm-8 col-form-label">Required number of sentences in
-                        result:</label>
-                    <div class="col-sm-4">
-                        <input class="form-control" type="number" min="0" value="5" name="sentlength">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-8 col-form-label" for="inputlength">Sentences in input:</label>
-                    <div class="col-sm-4">
-                        <input class="form-control-plaintext" type="text" value="" name="inputlength" id="inputlength">
-                    </div>
-                </div>
-
-            </div>
-            <div class="col">
-                <div class="row">
-                    <button type="button" class="btn btn-primary col-sm-4" onclick="make_summary()">Summarize</button>
-                    <div class="col-sm-4">
-                        <div class="spinner-border" role="status" id="summary-spinner" style="display: none;"></div>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-
-    </form>
-</div>
-{% endblock %}
