--- a/textalyzer/templates/wordfreq.html
+++ b/textalyzer/templates/wordfreq.html
@@ -1,6 +1,8 @@
 {% extends "texttools.html" %}
 {% block head %}
 <script src="{{ url_for('static', filename='js/wordfreq.js') }}"></script>
+<script src="{{ url_for('static', filename='js/d3_bar.js') }}"></script>
+<script src="https://d3js.org/d3.v6.min.js"></script>
 {{ super() }}
 {% endblock%}
 {% block nav_freq %}active{% endblock %}
